# StoryBox2

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  lib.rs  processor.rs  scanner.rs  stories.rs
src/components/: ActivityIndicator.tsx  HomeFeed.tsx  SettingsPanel.tsx  StoryViewer.tsx
